--- a/src/Components/Slider/imgSlider.module.css
+++ b/src/Components/Slider/imgSlider.module.css
@@ -1,7 +1,5 @@
 :root {
   --color: #f44336;
-  --bg: rgba(0, 0, 0, 0.54);
-  --disabled: rgba(255, 255, 255, 0.44);
 }
 
 .carusel {
@@ -10,51 +8,33 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  transition: background-image 200ms cubic-bezier(0.6, 0.04, 0.98, 0.335);
 }
 
 .control {
   position: absolute;
   top: 45%;
-  width: 4em;
-  height: 4em;
-  border-radius: 20px;
-  border: 3px solid var(--color);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: var(--bg);
   outline: none;
   color: var(--color);
-  backdrop-filter: blur(5px);
 }
 
 .prev {
-  left: 3%;
+  left: 2%;
 }
 
 .next {
-  right: 3%;
+  right: 2%;
 }
 
 .indicatorsList {
   position: absolute;
-  box-sizing: border-box;
   width: 20em;
-  bottom: 6%;
+  bottom: 5%;
   left: calc(50% - calc(20em / 2));
-  list-style: none;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-inline-start: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  color: var(--disabled);
-  background: var(--bg);
-  border-radius: 20px;
-  border: 3px solid var(--color);
-  padding: 1em 1em 0.5em 1em;
-  backdrop-filter: blur(5px);
+  color: var(--color);
 }
 
 /* SETTINGS */
@@ -62,39 +42,11 @@
   position: absolute;
   right: 0%;
   top: 0%;
-  background: var(--bg);
-  border-bottom: 3px solid var(--color);
-  border-left: 3px solid var(--color);
-  border-bottom-left-radius: 20px;
-  backdrop-filter: blur(5px);
-}
-
-.showControlsButton {
-  border: none;
-  padding: 0.5em 1em;
-  outline: none;
-  background: none;
-  color: var(--disabled);
-}
-
-.autoPlayButton {
-  border: none;
-  padding: 0.5em 1em;
-  outline: none;
-  background: none;
-  color: var(--disabled);
+  color: var(--color);
 }
 
 .likes {
   position: absolute;
   left: 1%;
   top: 2%;
-}
-
-.downloadLink {
-  border: none;
-  padding: 0.5em 1em;
-  outline: none;
-  background: none;
-  color: var(--color);
 }
