--- a/src/Components/Slider/imgSlider.module.css
+++ b/src/Components/Slider/imgSlider.module.css
@@ -3,12 +3,10 @@
 }
 
 .carusel {
-  position: relative;
+  position: absolute;
   background-size: cover;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
-  transition: background-image 200ms cubic-bezier(0.6, 0.04, 0.98, 0.335);
 }
 
 .control {
