--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
-html,
-body {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html,
+body {
   overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.54);
 }
